--- a/configuration.properties
+++ b/configuration.properties
@@ -7,3 +7,15 @@ password=12345
 
 #configuration properties temel datalarin bulundugu dosyadir
 #page object modelde kullanilir
+
+
+#OPEN SOURCE DATA
+open_source_url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+open_source_username = Admin
+open_source_password = admin123
+
+#TechproLoginPage Data
+techpro_login_page_url = https://testcenter.techproeducation.com/index.php?page=form-authentication
+techpro_login_page_username = techproed
+techpro_login_page_password = SuperSecretPassword
+
