--- a/configuration.properties
+++ b/configuration.properties
@@ -19,3 +19,9 @@ techpro_login_page_url = https://testcenter.techproeducation.com/index.php?page=
 techpro_login_page_username = techproed
 techpro_login_page_password = SuperSecretPassword
 
+#BLUE RENTAL CAR DATA
+app_url=https://www.bluerentalcars.com/
+admin_email=jack@gmail.com
+admin_sifre=12345
+fake_email=fake@bluerentalcars.com
+fake_pass=fakepass
